<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Homepage" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"/>
    <item android:id="@+id/action_new"
        android:title="@string/action_new"
        android:showAsAction="ifRoom"/>
    <item android:id="@+id/action_add_friend"
        android:title="@string/action_add_friend"
        android:showAsAction="never"/>
    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:showAsAction="never"/>
    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:showAsAction="never"/>
    <item android:id="@+id/action_test"
        android:title="Test"
        android:showAsAction="never"/>
</menu>
